Compiler/tests/syntax/good/testfile-comments-2.rs

fn main() { /* les commentaires /* sont
*/
@ imbriqués */
}
