Compiler/tests/syntax/bad/testfile-function-1.rs
fn foo(x) { }
fn main() { }
